add bday app to list

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,15 @@
-<h1>Chris Haack</h1>
+<h2>Chris Haack</h2>
 
-<a href="http://chryus.wordpress.com/">Blog</a></br>
-<a href="https://github.com/Chryus">Github</a>
+<ul>
+	<li><a href="http://chryus.wordpress.com/">Blog</a></li>
+	<li><a href="https://github.com/Chryus">Github</a></li>
+</ul>
 
-<h3>Sites</h3>
+<h3>Apps</h3>
 
-<a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a>
+<ul>
+	<li><a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
+	<li><a href="http://beedaye.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
+</ul>
 
 
