--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,20 +1,9 @@
 body {
   background: black;
   font-weight: 400;
-  padding-top: 30px;
+  padding-top: 50px;
 }
-.background {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background: url(../img/ratpack.jpg) no-repeat top;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  margin: 0 -20px;
-}
+
 .content {
   height: 500px;
   overflow: scroll;
@@ -22,24 +11,27 @@ body {
 h1, h2, h3 {
   font-family: 'Oswald', Helvetica, Arial, sans-serif;
   line-height: 1em;
-  text-align: right;
+  text-align: center;
 }
 h1 {
   font-weight: 900;
   font-style: italic;
-  color: yellow;
+  color: #FFFA8B;
   font-size: 200px;
+  text-align: center;
 }
 h2 {
   font-weight: 400;
   font-size: 50px;
-  color: white;
+  color: #FFFA8B;
+  text-align: left;
 }
 h2 a {
 
 }
 h3 {
   text-align: left;
+  color: #FFFA8B
 }
 
 section {
@@ -56,4 +48,11 @@ pre {
 }
 #github {
   z-index: 2;
+}
+
+li {
+  font-size: 20px;
+  margin-top: 30px;
+  color: #FFFA8B;
+  list-style: none;
 }
