change link name

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 
 <ul>
 	<li><a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
-	<li><a href="http://beedaye.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
+	<li><a href="http://beedaye.herokuapp.com/">What day is it?</a></li>
 </ul>
 
 
