--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,18 @@
-<h2>Chris Haack</h2>
 
-<ul>
-	<li><a href="http://chryus.wordpress.com/">Blog</a></li>
-	<li><a href="https://github.com/Chryus">Github</a></li>
-</ul>
+<section id="social">
+		<h3>Social</h3>
+	<ul>
+		<li><a href="http://chryus.wordpress.com/">Blog</a></li>
+		<li><a href="https://github.com/Chryus">Github</a></li>
+	</ul>
+</section>
 
-<h3>Apps</h3>
-
-<ul>
-	<li><a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
-	<li><a href="http://beedaye.herokuapp.com/">What day is it?</a></li>
-</ul>
+<section id="apps">
+	<h3>Apps</h3>
+	<ul>
+		<li><a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
+		<li><a href="http://beedaye.herokuapp.com/">What day is it?</a></li>
+	</ul>
+</section>
 
 
