--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,58 +1,3 @@
-body {
-  background: black;
-  font-weight: 400;
-  padding-top: 50px;
-}
-
-.content {
-  height: 500px;
-  overflow: scroll;
-}
-h1, h2, h3 {
-  font-family: 'Oswald', Helvetica, Arial, sans-serif;
-  line-height: 1em;
-  text-align: center;
-}
-h1 {
-  font-weight: 900;
-  font-style: italic;
-  color: #FFFA8B;
-  font-size: 200px;
-  text-align: center;
-}
-h2 {
-  font-weight: 400;
-  font-size: 50px;
-  color: #FFFA8B;
-  text-align: left;
-}
-h2 a {
-
-}
-h3 {
-  text-align: left;
-  color: #FFFA8B
-}
-
-section {
-  padding: 10px 20px;
-  margin: 20px 0;
-  background: rgba(255,255,255,.6);
-}
-pre {
-  display: inline;
-  padding: 2px;
-}
-.navbar {
-  z-index: 0;
-}
-#github {
-  z-index: 2;
-}
-
-li {
-  font-size: 20px;
-  margin-top: 30px;
-  color: #FFFA8B;
-  list-style: none;
+nav ul li {
+	display: inline-block;
 }
