--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,17 +1,20 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/custom.css">
   </head>
   <body>
   	<nav>
-  		<h2>Chris Haack</h2>
-		  <ul>
-		    <li><a href="/about">About</a></li>
-		    <li><a href="/contact">Contact</a></li>
-		    <li><a href="/social">Social</a></li>
-		    <li><a href="/apps">Apps</a></li>
-		  </ul>
+  		<div id="top">
+			  <ul>
+			  	<h2>Chris Haack</h2>
+			  	<li><a href="/">Home</a></li>
+			    <li><a href="/about">About</a></li>
+			    <li><a href="/contact">Contact</a></li>
+			    <li><a href="/social">Social</a></li>
+			    <li><a href="/apps">Apps</a></li>
+			  </ul>
+			</div>
 		</nav>
 	  <div class="container-fluid">
 	    <%= yield %>
