--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,15 @@
 
-<section id="social">
-		<h3>Social</h3>
+<section class="cubes" id="left">
 	<ul>
+		<h3>Social</h3>
 		<li><a href="http://chryus.wordpress.com/">Blog</a></li>
 		<li><a href="https://github.com/Chryus">Github</a></li>
 	</ul>
 </section>
 
-<section id="apps">
-	<h3>Apps</h3>
+<section class="cubes" id="right">	
 	<ul>
+		<h3>Apps</h3>
 		<li><a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
 		<li><a href="http://beedaye.herokuapp.com/">What day is it?</a></li>
 	</ul>
