--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,41 @@
+body {
+	font-family: Futura, sans-serif;
+}
+
+h2 {
+	margin: auto;
+}
 
 nav {
-	text-align: center;
+	position: relative;
+	background: #e0e2e6;
+	border-radius: 5px;
+}
+
+nav li {
+  display: inline;
+  margin: 0 5px;
+}
+
+nav ul {
+  margin: auto;
+  text-align: center;
+}
+
+#left {
+	width: 25%;
+
+}
+
+#right {
+	width: 71%;
+}
+
+.cubes {
+	display: inline-block;
+	height: 350px;
+	margin: 5px auto;
+	padding: 10px;
 	background: #e0e2e6;
 	border-radius: 5px;
 }
@@ -11,25 +46,4 @@ address {
 
 #email {
 	text-decoration: none;
-}
-
-nav ul li {
-	display: inline;
-	position: relative;
-	padding: 10px;
-}
-
-.cube #left {
-
-}
-
-.cube #right {
-
-}
-
-.cubes {
-	display: inline-block;
-	padding: 51px;
-	background: #e0e2e6;
-	border-radius: 5px;
 }
