--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,19 +24,22 @@ nav ul {
 }
 
 #left {
-	width: 25%;
+	width: 21%;
+	float: left;
+	padding-right: 2px;
 
 }
 
 #right {
-	width: 71%;
+	width: 78%;
+	float: right;
+	padding-left: 1px;
 }
 
 .cubes {
 	display: inline-block;
 	height: 350px;
-	margin: 5px 10px;
-	padding: 10px;
+	margin: 5px 0;
 	background: #e0e2e6;
 	border-radius: 5px;
 }
