--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 
-<section class="cubes" id="left">
+<!-- <section class="cubes" id="left">
 	<ul>
 		<h3>Social</h3>
 		<li><a href="http://chryus.wordpress.com/">Blog</a></li>
@@ -7,12 +7,16 @@
 	</ul>
 </section>
 
-<section class="cubes" id="right">	
+<section class="cubes" id="middle">	
 	<ul>
 		<h3>Apps</h3>
 		<li><a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
 		<li><a href="http://beedaye.herokuapp.com/">What day is it?</a></li>
 	</ul>
 </section>
+
+<section class="cubes" id="right">
+</section> -->
+
 
 
