--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,10 +10,26 @@
 			  	<li><a href="/">Home</a></li>
 			    <li><a href="/about">About</a></li>
 			    <li><a href="/contact">Contact</a></li>
-			    <li><a href="/social">Social</a></li>
-			    <li><a href="/apps">Apps</a></li>
 			  </ul>
 		</nav>
+		<section class="cubes" id="left">
+	<ul>
+		<h3>Social</h3>
+		<li><a href="http://chryus.wordpress.com/">Blog</a></li>
+		<li><a href="https://github.com/Chryus">Github</a></li>
+	</ul>
+</section>
+
+<section class="cubes" id="middle">	
+	<ul>
+		<h3>Apps</h3>
+		<li><a href="http://breakfast-tea.herokuapp.com/">Irish Breakfast/English Breakfast</a></li>
+		<li><a href="http://beedaye.herokuapp.com/">What day is it?</a></li>
+	</ul>
+</section>
+
+<section class="cubes" id="right">
+</section>
 	  <div class="container-fluid">
 	    <%= yield %>
 	  </div>
