--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 
-<!-- <section class="cubes" id="left">
+<section class="cubes" id="left">
 	<ul>
 		<h3>Social</h3>
 		<li><a href="http://chryus.wordpress.com/">Blog</a></li>
@@ -15,8 +15,11 @@
 	</ul>
 </section>
 
-<section class="cubes" id="right">
-</section> -->
+<div class="cubes" id="right">	
+</div>
+
+<footer class="cubes" id="bottom">
+</footer>
 
 
 
