--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -50,7 +50,6 @@ nav ul {
   width: 10%;
   float: right;
   padding-left: 10px;
-  transition: background-color 1s ease-in-out;
   background-color: rgba(175, 58, 58, 1.0);
 }
 
@@ -65,6 +64,7 @@ nav ul {
 
 .cubes {
   display: inline-block;
+  -webkit-transition: background-color .7s ease-in-out;
   height: 515px;
   margin: 5px 0;
   background: #e0e2e6;
