--- a/views/apps.haml
+++ b/views/apps.haml
@@ -1,6 +1,10 @@
 #apps
 	%h4 Sintatra Applications
 	%ul
+    %li
+      %a{:href=>"http://graffito.herokuapp.com/app/index.html#/graffiti"}Graffito
+    %li
+      %a{:href=>"http://betagovnyc.herokuapp.com/"}Open Data Timeline
 		%li
 			%a{:href=>"http://breakfast-tea.herokuapp.com/"}Irish Breakfast/English Breakfast
 		%li
