--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,5 +12,6 @@
           %a{:href=>"/about"}About
         %li
           %a{:href=>"/contact"}Contact
-    .container-fluid
-    = yield 
+    .container
+      = yield 
+    #bottom
