--- a/views/apps.haml
+++ b/views/apps.haml
@@ -1,5 +1,5 @@
 #apps
-	%h4 Sintatra Applications
+	%h4 Applications
 	%ul
     %li
       %a{:href=>"http://graffito.herokuapp.com/app/index.html#/graffiti"}Graffito
