--- a/views/index.haml
+++ b/views/index.haml
@@ -1,20 +1,25 @@
 .cubes#left
-	%ul
-		%h3 Social
-		%li
-			%a{:href=>"http://chryus.wordpress.com/"}Blog
-		%li
-			%a{:href=>"https://github.com/Chryus"}Github
-
+  %ul
+    %h3
+      #header Social
+    %li
+      %a{:href=>"http://chryus.wordpress.com/"}Blog
+    %li
+      %a{:href=>"https://github.com/Chryus"}Github
 .cubes#middle
-	%ul
-		%h3 Apps
-		%li
-			%a{:href=>"http://breakfast-tea.herokuapp.com/"}Irish Breakfast/English Breakfast
-		%li>
-			%a{:href=>"http://beedaye.herokuapp.com/"}What day is it?
-
+  %ul
+    %h3
+      #header Apps
+    %li
+      %a{:href=>"http://graffito.herokuapp.com/app/index.html#/graffiti"}Graffito
+    %li
+      %a{:href=>"http://betagovnyc.herokuapp.com/"}Open Data Timeline
+    %li
+      %a{:href=>"http://breakfast-tea.herokuapp.com/"}Irish Breakfast/English Breakfast
+    %li
+      %a{:href=>"http://beedaye.herokuapp.com/"}What day is it?
 .cubes#right
+
 
 
 
