--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,7 +5,8 @@
   %body
     %nav
       %ul
-        %h2 Chris Haack
+        %h2
+          #header Chris Haack
         %li
           %a{:href=>"/"}Home
         %li
@@ -14,4 +15,4 @@
           %a{:href=>"/contact"}Contact
     .container
       = yield 
-    #bottom
+      #bottom
