--- a/views/contact.haml
+++ b/views/contact.haml
@@ -1,3 +1,3 @@
 %p Send me an email: 
 %address
-	%a{:href=>"mailto:chris.haack@me.com", id=>"email"}Chris
+	%a{:href=>"mailto:chris.haack@me.com"}Chris
